java 17 gradle slim 2.2.0